--- a/front-end/admin/admin.html
+++ b/front-end/admin/admin.html
@@ -93,8 +93,8 @@
 
 <script>
 /* ---------- CONFIG ---------- */
-const SUPABASE_URL = "https://<your-project>.supabase.co";   // 👈 เปลี่ยนเป็นของคุณ
-const SUPABASE_ANON_KEY = "<your-anon-key>";                 // 👈 เปลี่ยนเป็นของคุณ
+const SUPABASE_URL = "https://yowjvmiosrclqstoeqat.supabase.co";   // 👈 เปลี่ยนเป็นของคุณ
+const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inlvd2p2bWlvc3JjbHFzdG9lcWF0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTgwMDc0OTksImV4cCI6MjA3MzU4MzQ5OX0.p71LqTM5gaJcpaAMMnWzLgsLNAka0nmR7BYntBiSYfU";                 // 👈 เปลี่ยนเป็นของคุณ
 const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY, {
   auth: { persistSession: true, autoRefreshToken: true, detectSessionInUrl: true }
 });
